# light-simd

./: .hgignore  CMakeLists.txt  Doxyfile  Makefile
bench/: CMakeLists.txt  bench_aux.h  bench_sse_arith.cpp  bench_sse_math.cpp  bench_sse_mats.cpp  bench_sse_mm.cpp  bench_sse_reduce.cpp  bench_sse_vecs.cpp
light_simd/: arch.h  simd.h  sse.h
light_simd/common/: common_base.h  simd_arith.h  simd_mat.h  simd_math.h  simd_matmul.h  simd_pack.h  simd_vec.h
light_simd/sse/: sse_arith.h  sse_base.h  sse_blas_ker.h  sse_const.h  sse_mat.h  sse_math.h  sse_pack.h  sse_vec.h
light_simd/sse/details/: sse_mat_bits.h  sse_mat_bits_f32.h  sse_mat_bits_f64.h  sse_mat_comp_bits.h  sse_mat_inv_bits.h  sse_mat_matmul_bits.h  sse_mat_sol_bits.h  sse_pack_bits.h  sse_pack_manip.h
tests/: CMakeLists.txt  bench_sse_arith.cpp  bench_sse_math.cpp  bench_sse_mats.cpp  bench_sse_mm.cpp  bench_sse_reduce.cpp  bench_sse_vecs.cpp  linalg_ref.h  test_aux.h  test_main.cpp  test_sse_arith.cpp  test_sse_inv.cpp  test_sse_math.cpp  test_sse_mats.cpp  test_sse_mm.cpp  test_sse_packs.cpp  test_sse_sol.cpp  test_sse_vecs.cpp
